# build-and-optimize-agentic-apps

./: .gitignore  .python-version  README.md  main.py  pyproject.toml  requirements.txt
src/: Lesson_2.ipynb  Lesson_3.ipynb  Lesson_4.ipynb
