[project]
name = "build-and-optimize-agentic-apps"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ai-custom-utils",
    "dotenv>=0.9.9",
    "dspy==2.6.23",
    "ipykernel>=6.29.5",
    "mlflow==2.21.3",
    "openai==1.61.0",
    "pydantic==2.11.3",
]

[tool.uv.sources]
ai-custom-utils = { git = "https://github.com/davoshack/ai-custom-utils.git" }
